--- a/views/signup.html
+++ b/views/signup.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>SignUp</title>
 </head>
 <body>
-    <form id="loginform">
+    <form id="signupform">
+        <label for="username" class="labels">Enter your name: </label>
+        <input type="text" name="username" id="username" required>
         <label for="email" class="labels">Enter your email: </label>
         <input type="email" name="email" id="email" required>
         <label for="password" class="labels">Enter your password: <label>
         <input type="password" name="password" id="password" required>
-        <input type="submit" id="submit" value="login"><br>
-        <a href="signup.html">New User - Signup here</a>
+        <input type="submit" id="submit" value="Signup"><br>
+        <a href="login.html">Existing User - Login here</a>
     </form>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-    <script src="../public/js/login.js"></script>
+    <script src="../public/js/signup.js"></script>
 </body>
 </html>
