--- a/views/expense.html
+++ b/views/expense.html
@@ -33,7 +33,7 @@
     <ul id="expenses"></ul>
 
     <!-- JS for the backend logic -->
-    <script src="main.js"></script>
+    <script src="../public/js/expense.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
 </body>
 
