--- a/views/expense.html
+++ b/views/expense.html
@@ -7,18 +7,20 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    
+    <link href="../public/css/main.css" rel="stylesheet">
 </head>
 <body>
-
+    <div class="header">
+        <button id="premiumBtn">Buy Premium</button>
+    </div><hr>
     <!-- Expense Tracker Form -->
     <form id="ExpenseForm" class="form-group">
-        <label for="amount">Expense Amount: </label>
-        <input type="number" name="amount" id="amt" min="1">
-        <label for="description">Choose Description: </label>
-        <input type="text" name="description" id="descr">
-        <label for="category">Choose Category: </label>
-        <select name="category" id="cat">
+        <label for="amt">Expense Amount: </label>
+        <input type="number" name="amount" id="amt" min="1" required>
+        <label for="descr">Choose Description: </label>
+        <input type="text" name="description" id="descr" required>
+        <label for="cat">Choose Category: </label>
+        <select name="category" id="cat" required>
             <option class="catOption">Fuel</option>
             <option class="catOption">Food</option>
             <option class="catOption">Movie</option>
@@ -33,8 +35,10 @@
     <ul id="expenses"></ul>
 
     <!-- JS for the backend logic -->
-    <script src="../public/js/expense.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+    <script src="../public/js/expense.js"></script>
+    <script src="../public/js/membership.js"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </body>
 
 </html>
