--- a/views/login.html
+++ b/views/login.html
@@ -12,7 +12,7 @@
         <label for="password" class="labels">Enter your password: <label>
         <input type="password" name="password" id="password" required>
         <input type="submit" id="submit" value="login"><br>
-        <a href="signup.html">New User - Signup here</a>
+        <a href="signup.html">New User - Signup here</a><br>
     </form>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
