add premium tag; resolve display-premium tag after login

--- a/views/expense.html
+++ b/views/expense.html
@@ -12,6 +12,7 @@
 <body>
     <div class="header">
         <button id="premiumBtn">Buy Premium</button>
+        <h6 id="premiumTag"><span>Premium User</span></h6>
     </div><hr>
     <!-- Expense Tracker Form -->
     <form id="ExpenseForm" class="form-group">
