--- a/views/expense.html
+++ b/views/expense.html
@@ -36,15 +36,15 @@
     <br>
 
     <!-- Add expenses here -->
-    <ul id="expenses"></ul>
+    <ul id="expenses"></ul><hr>
     <ul id="leaderboard"></ul>
 
     <!-- JS for the backend logic -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="../public/js/expense.js"></script>
     <script src="../public/js/membership.js"></script>
-    <script src="../public/js/leaderboard.js"></script>
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script src="../public/js/leaderboard.js"></script> 
 </body>
 
 </html>
