update code to display leaderboard only for premium user

--- a/views/expense.html
+++ b/views/expense.html
@@ -15,8 +15,8 @@
         <h6 id="premiumTag"><span>Premium User</span></h6>
     </div><hr>
     <!-- Expense Tracker Form -->
-    <div>
-        <button id="leaderboardBtn">Leaderboard</button>
+    <div id="premiumFeatures">
+        <!-- <button id="leaderboardBtn">Leaderboard</button> -->
     </div>
     <form id="ExpenseForm" class="form-group">
         <label for="amt">Expense Amount: </label>
