--- a/views/forget-password.html
+++ b/views/forget-password.html
@@ -3,25 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Forget Password</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </head>
 <body>
     <br>
-    <form id="loginform">
+    <form id="forgetPasswordForm">
         <label for="email" class="labels">Enter your email: </label>
         <input type="email" name="email" id="email" required>
-        <label for="password" class="labels">Enter your password: </label>
-        <input type="password" name="password" id="password" required>
-
-        <input type="submit" id="submit" value="login"><br>
-        <a href="signup.html">New User - Signup here</a><br>
-        <a href="forget-password.html">Forgot Password - reset here</a><br>
-
+        <input type="submit" id="submit" value="reset password"><br>
+        <a href="login.html">Login</a><br>
     </form>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-    <script src="../public/js/login.js"></script>
+    <script src="../public/js/forget-password.js"></script>
 </body>
 </html>
