--- a/views/signup.html
+++ b/views/signup.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SignUp</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </head>
 <body>
+    <br>
     <form id="signupform">
         <label for="username" class="labels">Enter your name: </label>
         <input type="text" name="username" id="username" required>
         <label for="email" class="labels">Enter your email: </label>
         <input type="email" name="email" id="email" required>
-        <label for="password" class="labels">Enter your password: <label>
+        <label for="password" class="labels">Enter your password: </label>
         <input type="password" name="password" id="password" required>
         <input type="submit" id="submit" value="Signup"><br>
         <a href="login.html">Existing User - Login here</a>
