download report feature frontend

--- a/views/expense.html
+++ b/views/expense.html
@@ -44,7 +44,7 @@
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="../public/js/expense.js"></script>
     <script src="../public/js/membership.js"></script>
-    <script src="../public/js/leaderboard.js"></script> 
+    <script src="../public/js/premiumFeatures.js"></script> 
 </body>
 
 </html>
