--- a/views/expense.html
+++ b/views/expense.html
@@ -17,7 +17,7 @@
     <!-- Expense Tracker Form -->
     <div id="premiumFeatures">
         <!-- <button id="leaderboardBtn">Leaderboard</button> -->
-    </div>
+    </div><hr>
     <form id="ExpenseForm" class="form-group">
         <label for="amt">Expense Amount: </label>
         <input type="number" name="amount" id="amt" min="1" required>
@@ -36,8 +36,10 @@
     <br>
 
     <!-- Add expenses here -->
-    <ul id="expenses"></ul><hr>
-    <ul id="leaderboard"></ul>
+    <ul id="expensesContainer"></ul>
+    <div id="pageContainer"></div>
+    <hr>
+    <ul id="leaderboardContainer"></ul>
 
     <!-- JS for the backend logic -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
