dynamic pagination added; add/delete/edit expense updated to support pagination

--- a/views/expense.html
+++ b/views/expense.html
@@ -35,6 +35,17 @@
     </form>
     <br>
 
+    <div class="dynamicPagingContainer">
+        <label for="dynamicPage">Rows per page: </label>
+        <select name="dynamicPage" id="dynamicPage" required>
+            <option class="pageOption">2</option>
+            <option class="pageOption">4</option>
+            <option class="pageOption">6</option>
+            <option class="pageOption">8</option>
+            <option class="pageOption">10</option>
+        </select>
+    </div>
+
     <!-- Add expenses here -->
     <ul id="expensesContainer"></ul>
     <div id="pageContainer"></div>
