BACKEND URL fix

--- a/views/reset-password.html
+++ b/views/reset-password.html
@@ -24,6 +24,8 @@
         const newPassword = document.getElementById("password");
         passwordResetForm.addEventListener('submit',passwordReset);
 
+        const BACKEND_ADDRESS = 'localhost:3000';
+
         async function passwordReset(e){
             try{
                 e.preventDefault();
@@ -31,14 +33,15 @@
                     return alert('kindly fill the new password field');
                 }
                 const resetId= window.location.href.split('/').pop();
-                const response = await axios.patch(`http://localhost:9000/password/updatepassword/`,{newPassword: newPassword.value, requestId: resetId});
+                const response = await axios.patch(`http://${BACKEND_ADDRESS}/password/updatepassword/`,{newPassword: newPassword.value, requestId: resetId});
                 if(response.status === 200){
                     alert(response.data.message);
-                    return window.location.href = 'http://localhost:5501/views/login.html';
+                    return window.location.href = `http://${BACKEND_ADDRESS}/login.html`;
                 }
             }
             catch(err){
-                alert(err.response.data.error);
+                if(err.response)
+                    alert(err.response.data.error);
             }
         }
     </script>
