--- a/views/reset-password.html
+++ b/views/reset-password.html
@@ -24,7 +24,8 @@
         const newPassword = document.getElementById("password");
         passwordResetForm.addEventListener('submit',passwordReset);
 
-        const BACKEND_ADDRESS = 'localhost:3000';
+        const BACKEND_ADDRESS = '54.234.60.93:3000';
+        docuement.getElementsByTagname('a').href = `http://${BACKEND_ADDRESS}/login.html`;
 
         async function passwordReset(e){
             try{
