erset password: back to login link fixed

--- a/views/reset-password.html
+++ b/views/reset-password.html
@@ -25,7 +25,7 @@
         passwordResetForm.addEventListener('submit',passwordReset);
 
         const BACKEND_ADDRESS = '54.234.60.93:3000';
-        docuement.getElementsByTagname('a').href = `http://${BACKEND_ADDRESS}/login.html`;
+        document.getElementsByTagName('a')[0].href = `http://${BACKEND_ADDRESS}/login.html`;
 
         async function passwordReset(e){
             try{
