--- a/views/expense.html
+++ b/views/expense.html
@@ -14,30 +14,57 @@
     <link href="../public/css/main.css" rel="stylesheet">
 </head>
 <body>
-    <div class="header">
-        <button id="premiumBtn">Buy Premium</button>
-        <h6 id="premiumTag"><span>Premium User</span></h6>
-    </div><hr>
+    <div id="header-top">
+        <div class="header">
+            <div id="header-logo"><h1>Expense Tracker</h1></div>
+            <div id="premiumTag"><h5>Premium</h5></div>
+        </div>
+    </div>
+
+    <hr>
+
     <!-- Expense Tracker Form -->
     <div id="premiumFeatures">
-        <!-- <button id="leaderboardBtn">Leaderboard</button> -->
-    </div><hr>
-    <form id="ExpenseForm" class="form-group">
-        <label for="amt">Expense Amount: </label>
-        <input type="number" name="amount" id="amt" min="1" required>
-        <label for="descr">Choose Description: </label>
-        <input type="text" name="description" id="descr" required>
-        <label for="cat">Choose Category: </label>
-        <select name="category" id="cat" required>
-            <option class="catOption">Fuel</option>
-            <option class="catOption">Food</option>
-            <option class="catOption">Movie</option>
-            <option class="catOption">Electricity</option>
-            <option class="catOption">Others</option>
-        </select>
-        <input type="submit" id="submit" value="Add Expense">
-    </form>
+    </div>
+    
+    <hr>
     <br>
+    <div class="addExpenseContainer">
+        <form id="ExpenseForm" class="authContainer-form">
+            <table id="Expensetable" class="authContainer-table">
+                <tr class="table_row">
+                    <td class="table_data"><label for="amt" class="labels">Expense Amount: </label><td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data"><input type="number" name="amount" id="amt" min="1" required></td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data"><label for="descr" class="labels">Choose Description: </label></td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data"><input type="text" name="description" id="descr" required></td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data">
+                        <label for="cat" class="labels">Choose Category: </label>
+                        <select name="category" id="cat" required>
+                            <option class="catOption">Fuel</option>
+                            <option class="catOption">Food</option>
+                            <option class="catOption">Movie</option>
+                            <option class="catOption">Electricity</option>
+                            <option class="catOption">Others</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data"><button id="submit">Add Expense</button></td>
+                </tr>
+            </table>
+        </form>
+    </div>
+
+    <br>
+    <hr>
 
     <div class="dynamicPagingContainer">
         <label for="dynamicPage">Rows per page: </label>
@@ -51,10 +78,18 @@
     </div>
 
     <!-- Add expenses here -->
-    <ul id="expensesContainer"></ul>
+    <div id="expensesContainer">
+        <table id="expenseTable"></table>
+    </div>
     <div id="pageContainer"></div>
+
     <hr>
-    <ul id="leaderboardContainer"></ul>
+
+    <!-- <ul id="leaderboardContainer"></ul> -->
+    <div id="leaderboardHeader"></div>
+    <div id="leaderboardContainer">
+        <table id="leaderBoardTable"></table>
+    </div>
 
     <!-- JS for the backend logic -->
     <script src="../public/js/expense.js"></script>
