--- a/views/login.html
+++ b/views/login.html
@@ -9,21 +9,42 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-
+    <link href="../public/css/main.css" rel="stylesheet">
 </head>
 <body>
-    <br>
-    <form id="loginform">
-        <label for="email" class="labels">Enter your email: </label>
-        <input type="email" name="email" id="email" required>
-        <label for="password" class="labels">Enter your password: </label>
-        <input type="password" name="password" id="password" required>
-
-        <input type="submit" id="submit" value="login"><br>
-        <a href="signup.html">New User - Signup here</a><br>
-        <a href="forget-password.html">Forgot Password - reset here</a><br>
-
-    </form>
+    <!-- <div class="container">
+        <div class="alertContainer" id="alertContainer">
+            <div id="messageAlert"></div>
+            <div id="errorAlert"></div>
+        </div>
+    </div> -->
+    <div class="authContainer">
+        <form id="loginform" class="authContainer-form">
+            <table id="logintable" class="authContainer-table">
+                <tr class="table_row">
+                    <td class="table_data"><label for="email" class="labels">Email ID: </label><td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data"><input type="email" name="email" id="email" placeholder="Enter your Email ID here"></td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data"><label for="password" class="labels">Password: </label></td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data"><input type="password" name="password" id="password" placeholder="Enter your Password here"></td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data"><button id="submit">Sign In</button></td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data"><a href="signup.html">Sign Up</a></td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data"><a href="forget-password.html">Forgot Password</a></td>
+                </tr>
+            </table>
+        </form>
+    </div>
 
     <script src="../public/js/login.js"></script>
 </body>
