--- a/views/reset-password.html
+++ b/views/reset-password.html
@@ -24,7 +24,7 @@
         const newPassword = document.getElementById("password");
         passwordResetForm.addEventListener('submit',passwordReset);
 
-        const BACKEND_ADDRESS = '3.91.158.198:3000';
+        const BACKEND_ADDRESS = 'localhost:3000';
         document.getElementsByTagName('a')[0].href = `http://${BACKEND_ADDRESS}/login.html`;
 
         async function passwordReset(e){
