--- a/views/signup.html
+++ b/views/signup.html
@@ -7,20 +7,43 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-
+    <link href="../public/css/main.css" rel="stylesheet">
 </head>
 <body>
-    <br>
-    <form id="signupform">
-        <label for="username" class="labels">Enter your name: </label>
-        <input type="text" name="username" id="username" required>
-        <label for="email" class="labels">Enter your email: </label>
-        <input type="email" name="email" id="email" required>
-        <label for="password" class="labels">Enter your password: </label>
-        <input type="password" name="password" id="password" required>
-        <input type="submit" id="submit" value="Signup"><br>
-        <a href="login.html">Existing User - Login here</a>
-    </form>
+    <div class="authContainer">
+        <form id="signupform" class="authContainer-form">
+            <table id="singuptable" class="authContainer-table">
+                <tr class="table_row">
+                    <td class="table_data"><label for="username" class="labels">Username: </label><td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data"><input type="text" name="username" id="username" placeholder="Enter your Username here" required></td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data"><label for="email" class="labels">Email ID: </label></td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data"><input type="email" name="email" id="email" placeholder="Enter your Email ID here" required></td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data"><label for="password" class="labels">Password: </label></td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data"><input type="password" name="password" id="password" placeholder="Enter your Password here" required></td>
+                </tr>
+                <tr class="table_row">
+                    <td class="table_data"><button id="submit">Sign Up</button></td>
+                </tr>
+            </tr>
+            <tr class="table_row">
+                <td class="table_data"><a href="login.html">Sign In</a></td>
+            </tr>
+            <tr class="table_row">
+                <td class="table_data"><a href="forget-password.html">Forgot Password</a></td>
+            </tr>
+            </table>
+        </form>
+    </div>
 
     <script src="../public/js/signup.js"></script>
 </body>
