initial dev setup

--- a/views/expense.html
+++ b/views/expense.html
@@ -25,6 +25,7 @@
 
     <!-- Expense Tracker Form -->
     <div id="premiumFeatures">
+        <!-- <button id="expensePageBtn" onclick="getLeaderboard()" >Add Expense</button> -->
     </div>
     
     <hr>
