--- a/public/css/main.css
+++ b/public/css/main.css
@@ -202,3 +202,23 @@ hr{
     background-color: rgb(255, 213, 0);
     color: black;
 }
+
+
+/* #premiumFeatures {
+    display: flex;
+    width: 100%;
+}
+
+#premiumFeatures button {
+    box-sizing: border-box;
+    text-align: center;
+    padding: 10px; /* Adjust as needed */
+    /* border: 1px solid #ccc; Optional: Add border for better visibility */
+    /* flex: 1; Initially, the first button takes 1/3 of the width */
+    /* max-width: 33%; Ensure the maximum width is 1/3 */
+/* } */
+
+/* Additional buttons take an equal share of the space */
+/* #premiumFeatures button:not(:first-child) { */
+    /* flex: 1; Additional buttons take an equal share of the space */
+/* } */
