password model implementation updated to support mongodb-mongoose

--- a/views/reset-password.html
+++ b/views/reset-password.html
@@ -34,7 +34,7 @@
                     return alert('kindly fill the new password field');
                 }
                 const resetId= window.location.href.split('/').pop();
-                const response = await axios.patch(`http://${BACKEND_ADDRESS}/password/updatepassword/`,{newPassword: newPassword.value, requestId: resetId});
+                const response = await axios.patch(`http://${BACKEND_ADDRESS}/password/update/`,{newPassword: newPassword.value, requestId: resetId});
                 if(response.status === 200){
                     alert(response.data.message);
                     return window.location.href = `http://${BACKEND_ADDRESS}/login.html`;
