--- a/views/forget-password.html
+++ b/views/forget-password.html
@@ -29,7 +29,7 @@
                     <td class="table_data"><button id="submit">Reset Password</button></td>
                 </tr>
                 <tr class="table_row">
-                    <td class="table_data"><a href="login.html">Sign In</a></td>
+                    <td class="table_data"><a href="signin.html">Sign In</a></td>
                 </tr>
                 <tr class="table_row">
                     <td class="table_data"><a href="signup.html">Sign Up</a></td>
