--- a/views/reset-password.html
+++ b/views/reset-password.html
@@ -37,7 +37,7 @@
                 const response = await axios.patch(`http://${BACKEND_ADDRESS}/password/update/`,{newPassword: newPassword.value, requestId: resetId});
                 if(response.status === 200){
                     alert(response.data.message);
-                    return window.location.href = `http://${BACKEND_ADDRESS}/login.html`;
+                    return window.location.href = `http://${BACKEND_ADDRESS}/signin.html`;
                 }
             }
             catch(err){
