--- a/views/signin.html
+++ b/views/signin.html
@@ -46,6 +46,6 @@
         </form>
     </div>
 
-    <script src="../public/js/login.js"></script>
+    <script src="../public/js/signin.js"></script>
 </body>
 </html>
