--- a/views/signup.html
+++ b/views/signup.html
@@ -36,7 +36,7 @@
                 </tr>
             </tr>
             <tr class="table_row">
-                <td class="table_data"><a href="login.html">Sign In</a></td>
+                <td class="table_data"><a href="signin.html">Sign In</a></td>
             </tr>
             <tr class="table_row">
                 <td class="table_data"><a href="forget-password.html">Forgot Password</a></td>
