--- a/views/ex.html
+++ b/views/ex.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense Tracker</title>
+    <title>ExpendEase</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
@@ -118,9 +118,9 @@
                 <div class="leaderboard container row bg-light m-0 inactive">
                     <div class="left col-md-6 p-5">
                         <div class="container d-flex justify-content-around  ">
-                            <button class="btn btn-dark " onclick="getLeaderboard(1,event)">All Time</button>
-                            <button class="btn btn-dark " onclick="getLeaderboard(1,event)">Yearly</button>
-                            <button class="btn btn-dark " onclick="getLeaderboard(1,event)">Monthly</button>
+                            <button class="btn btn-dark " onclick="getLeaderboard(1,event); getUserStats(event);">All Time</button>
+                            <button class="btn btn-dark " onclick="getLeaderboard(1,event); getUserStats(event);">Yearly</button>
+                            <button class="btn btn-dark " onclick="getLeaderboard(1,event); getUserStats(event);">Monthly</button>
                         </div>
                         <div class="leaderboardContainer row form-group mt-5 mb-1 ps-3 pe-3">
                             <table id="leaderBoardTable" class="table table-sm  table-hover justify-content-center">
@@ -143,7 +143,7 @@
                         <hr>
                         <div class="container">
                             <h3>Your Stats</h3>
-
+                            <h4 id="user-expense-total"></h4>
                         </div>
                     </div>
                 </div>
