--- a/views/reset-password.html
+++ b/views/reset-password.html
@@ -35,7 +35,7 @@
         const newPassword = document.getElementById("password");
         passwordResetForm.addEventListener('submit',passwordReset);
 
-        const BACKEND_ADDRESS = 'http://localhost:3000';
+        const BACKEND_ADDRESS = 'http://34.229.158.3:3000';
         document.getElementsByTagName('a')[0].href = `${BACKEND_ADDRESS}/home.html`;
 
         async function passwordReset(e){
